--- a/wordCount.html
+++ b/wordCount.html
@@ -17,18 +17,17 @@ Remember to remove all white spaces from the end of the text! Enter text...</tex
       >
       <div>
         <button type="submit" id="analyze">
-          <img src="data-file-upload.png" />
+          <img src="data-file-upload.png" alt="data file upload icon" />
         </button>
         <button type="submit" id="reset">
-          <img src="data-file-bars-refresh.png" />
+          <img
+            src="data-file-bars-refresh.png"
+            alt="data file bars refresh icon"
+          />
         </button>
       </div>
       <div class="footer">
-        <a
-          href="https://www.streamlineicons.com/"
-          target="_blank"
-          alt=" Free Icons from the Streamline Icons Pack"
-        >
+        <a href="https://www.streamlineicons.com/" target="_blank">
           Free Icons from the Streamline Icons Pack</a
         >
       </div>
@@ -61,10 +60,10 @@ Remember to remove all white spaces from the end of the text! Enter text...</tex
         </div>
         <span class="buttons">
           <button type="button" id="backwards" name="backwards" disabled>
-            <img src="arrow-circle-left.png" />
+            <img src="arrow-circle-left.png" alt="arrow circle left"/>
           </button>
           <button type="button" id="forward" name="foward" disabled>
-            <img src="arrow-circle-right.png" />
+            <img src="arrow-circle-right.png"  alt="arrow circle right" />
           </button>
         </span>
       </div>
